updated index file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\KIIT\Desktop\Web.Dev. Udemy\HTML - Personal Site\images\Alisha Panigrahi.png" alt="Alisha Panigrahi" width="200" height="200"></td>
+      <td><img src="images\Alisha Panigrahi.png" alt="Alisha Panigrahi" width="200" height="200"></td>
       <td>
         <h1>Alisha Panigrahi</h1>
         <p><em>Student at <a href="https://kiit.ac.in/"><strong>KIIT University</strong></em></a> </p>
@@ -123,7 +123,7 @@
 
 
 
-  <h3><a href="C:\Users\KIIT\Desktop\Web.Dev. Udemy\HTML - Personal Site\certificates.HTML">My Certificates</a></h3>
-  <h3><a href="C:\Users\KIIT\Desktop\Web.Dev. Udemy\HTML - Personal Site\Contact Details.HTML">Contact Me</a></h3>
+  <h3><a href="certificates.HTML">My Certificates</a></h3>
+  <h3><a href="Contact Details.HTML">Contact Me</a></h3>
 
 </html>
