updated file again

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
 
-  <h3><a href="certificates.HTML">My Certificates</a></h3>
-  <h3><a href="Contact Details.HTML">Contact Me</a></h3>
+  <h3><a href="certificates.html">My Certificates</a></h3>
+  <h3><a href="Contact Details.html">Contact Me</a></h3>
 
 </html>
